1. 修复例子工程。 2. Mapper 具有 @MapperDef 注释或继承自 Mapper 接口即可满足判断要求，不必必须标注 @MapperDef 关联的注释。