@@ -51,15 +51,15 @@
         <module>dbvisitor-integration/dbvisitor-spring-starter</module>
         <module>dbvisitor-integration/dbvisitor-hasor</module>
         <module>dbvisitor-integration/dbvisitor-guice</module>
+        <module>dbvisitor-integration/dbvisitor-solon</module>
     </modules>
 
-    <!-- 引用依赖 -->
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>net.hasor</groupId>
                 <artifactId>cobble-all</artifactId>
-                <version>4.6.5-SNAPSHOT</version>
+                <version>4.7.0</version>
             </dependency>
             <dependency>
                 <groupId>net.hasor</groupId>
@@ -89,7 +89,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.11.0</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -114,7 +114,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.1.1</version>
+                <version>3.2.0</version>
                 <configuration>
                     <failOnError>false</failOnError>
                     <failOnWarnings>false</failOnWarnings>
@@ -136,7 +136,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>3.2.0</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                 </configuration>
@@ -232,6 +232,48 @@
                             <releaseProfiles>release</releaseProfiles>
                             <tagNameFormat>v@{project.version}</tagNameFormat>
                             <goals>deploy</goals>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>jdk-1.8</id>
+            <activation>
+                <jdk>1.8</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.1.2</version>
+                        <configuration>
+                            <testFailureIgnore>true</testFailureIgnore>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>jdk-default</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <jdk>!1.8</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.1.2</version>
+                        <configuration>
+                            <testFailureIgnore>true</testFailureIgnore>
+                            <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
+                            <argLine>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argLine>
+                            <argLine>--add-opens=java.base/java.io=ALL-UNNAMED</argLine>
+                            <argLine>--add-opens=java.base/java.net=ALL-UNNAMED</argLine>
+                            <!-- <argLine>&#45;&#45;add-opens=jdk.unsupported=ALL-UNNAMED</argLine>-->
                         </configuration>
                     </plugin>
                 </plugins>
